# api-rest-flask

./: .gitignore  app.py  pyproject.toml
